--- a/index.html
+++ b/index.html
@@ -418,6 +418,70 @@
       color: #dee2ff;
     }
 
+    /* RECAP SECTION */
+
+    .recap-wrapper {
+      margin-top: 2.2rem;
+      background: radial-gradient(circle at top, #2a1b33 0, #151522 60%);
+      border-radius: var(--radius-lg);
+      border: 1px solid var(--border);
+      box-shadow: var(--shadow);
+      padding: 1.6rem 1.6rem 1.8rem;
+    }
+
+    .recap-tagline {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      letter-spacing: 0.15em;
+      color: var(--muted);
+      margin-bottom: 0.4rem;
+    }
+
+    .recap-title {
+      font-size: 1.2rem;
+      font-weight: 600;
+      margin-bottom: 0.8rem;
+    }
+
+    .recap-divider {
+      height: 1px;
+      background: linear-gradient(to right, transparent, rgba(255,255,255,0.18), transparent);
+      margin: 0.8rem 0 1rem;
+    }
+
+    .recap-block + .recap-block {
+      margin-top: 1.1rem;
+    }
+
+    .recap-block h3 {
+      font-size: 0.95rem;
+      text-transform: uppercase;
+      letter-spacing: 0.16em;
+      color: var(--muted);
+      margin-bottom: 0.2rem;
+    }
+
+    .recap-block p {
+      font-size: 0.9rem;
+      color: #e5e5f5;
+    }
+
+    .recap-list {
+      margin-top: 0.4rem;
+      padding-left: 1.1rem;
+      font-size: 0.9rem;
+      color: #e5e5f5;
+    }
+
+    .recap-list li {
+      margin-bottom: 0.25rem;
+    }
+
+    .recap-highlight {
+      font-weight: 600;
+      color: var(--accent);
+    }
+
     /* Footer */
 
     footer {
@@ -473,6 +537,7 @@
       <nav>
         <ul>
           <li><a href="#party">Party</a></li>
+          <li><a href="#recap">Recap</a></li>
           <li><a href="#loot">Loot</a></li>
           <li><a href="#locations">Places</a></li>
         </ul>
@@ -636,6 +701,123 @@
             </p>
           </div>
         </article>
+      </div>
+    </section>
+
+    <!-- SESSION RECAP -->
+    <section id="recap">
+      <h2>Session Recap</h2>
+      <p class="section-subtitle">
+        For new or returning players joining the campaign. Read this before we drop into
+        the next session, so you remember why everything is on fire.
+      </p>
+
+      <div class="recap-wrapper">
+        <div class="recap-tagline">Player Recap</div>
+        <div class="recap-title">“Where the Story Is Now”</div>
+
+        <div class="recap-divider"></div>
+
+        <div class="recap-block">
+          <h3>🐉 The Story So Far</h3>
+          <p>
+            Stormwreck Isle was only the beginning. While investigating strange draconic
+            disturbances, your group uncovered the first signs of a much larger threat:
+            <span class="recap-highlight">The Cult of the Dragon</span>, a fanatical order
+            determined to bring Tiamat, the five-headed Chromatic Dragon Queen, into the world.
+          </p>
+          <p style="margin-top:0.4rem;">
+            The cult has been attacking towns and villages across the Sword Coast, stealing gold,
+            artifacts, and prisoners for unknown purposes. One of the hardest-hit towns was
+            <span class="recap-highlight">Greennest</span>, a small settlement nearly destroyed
+            by a sudden cult assault supported by half-dragons, drakes, and corrupted priests.
+            Your party helped defend survivors, rescue families, and uncover the truth behind
+            the attack.
+          </p>
+          <p style="margin-top:0.4rem;">
+            The cult didn’t want one specific relic. They wanted <em>everything</em> — and the
+            raid was part of a much wider plan.
+          </p>
+        </div>
+
+        <div class="recap-block">
+          <h3>🔥 Your Current Mission</h3>
+          <p>
+            A monk named <span class="recap-highlight">Leosin Erlanthar</span>, who had infiltrated
+            the cult, revealed that many captured villagers — including himself — are being taken to
+            a massive raiders’ camp hidden in a deep ravine several miles from town.
+          </p>
+          <p style="margin-top:0.4rem;">
+            He asked the party to:
+          </p>
+          <ul class="recap-list">
+            <li>Infiltrate the camp</li>
+            <li>Rescue the prisoners</li>
+            <li>Learn the cult’s true plan</li>
+          </ul>
+          <p style="margin-top:0.4rem;">
+            The cult is dangerous, disciplined, and growing stronger. Tonight, you infiltrate their camp.
+          </p>
+        </div>
+
+        <div class="recap-block">
+          <h3>⚠️ What You Know About the Cult</h3>
+          <ul class="recap-list">
+            <li>They serve <span class="recap-highlight">Tiamat, the Dragon Queen</span>.</li>
+            <li>They believe the world must burn and be remade under chromatic dragons.</li>
+            <li>They are collecting massive amounts of gold and treasure.</li>
+            <li>They are led by <strong>Wyrmspeakers</strong>, elite half-dragon commanders.</li>
+            <li>Their forces include human fanatics, kobolds, drakes, corrupted elemental cultists, and half-dragons.</li>
+            <li>Their next step may be mobilizing an army.</li>
+          </ul>
+        </div>
+
+        <div class="recap-block">
+          <h3>🧩 New Characters Will Join in the Raider Camp</h3>
+          <p>
+            In the raider camp, the group discovers several powerful prisoners the cult feared too much
+            to kill. These include:
+          </p>
+          <ul class="recap-list">
+            <li><span class="recap-highlight">Elara Sunfang</span> — a cursed Blood Hunter, bound and muzzled because her lycanthropy is too dangerous.</li>
+            <li><span class="recap-highlight">Syla Vaelora</span> — a deadly elven ranger, captured after killing several drakes on her own.</li>
+            <li><span class="recap-highlight">ZOX</span> — an aasimar warlock, imprisoned because their psychic visions disturb the cult.</li>
+          </ul>
+          <p style="margin-top:0.4rem;">
+            These characters will be freed during the mission and join the party for the escape.
+          </p>
+        </div>
+
+        <div class="recap-block">
+          <h3>🏹 The Next Session</h3>
+          <p>You will:</p>
+          <ul class="recap-list">
+            <li>Enter the huge war camp.</li>
+            <li>Sneak past guards and drakes.</li>
+            <li>Free the prisoners.</li>
+            <li>Meet the new characters.</li>
+            <li>Battle cult fanatics.</li>
+            <li>Face the half-dragon champion <strong>Cyanwrath</strong>.</li>
+            <li>Confront cult commander <strong>Frulam Mondath</strong>.</li>
+            <li>Escape through a massive riot you spark from inside.</li>
+            <li>Learn the cult’s <span class="recap-highlight">true strategy</span>.</li>
+            <li>And escape back to Greennest for the next phase of your journey.</li>
+          </ul>
+          <p style="margin-top:0.4rem;">
+            This session is infiltration-heavy, roleplay-heavy, and packed with tense, dangerous moments.
+          </p>
+        </div>
+
+        <div class="recap-block">
+          <h3>🌍 The Stakes</h3>
+          <p>
+            The Cult of the Dragon is preparing something massive — something world-shaking.
+            If they are not stopped now, the Sword Coast may fall into the shadow of dragons.
+          </p>
+          <p style="margin-top:0.4rem;">
+            <span class="recap-highlight">You are the only ones who know enough to stop them.</span>
+          </p>
+        </div>
       </div>
     </section>
 
