Link external stylesheet in index.html
Replaced internal CSS styles with an external stylesheet link.

--- a/index.html
+++ b/index.html
@@ -4,530 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Queen of Dragons – Campaign Hub</title>
-  <style>
-    :root {
-      --bg: #050509;
-      --bg-alt: #101018;
-      --accent: #e4572e;
-      --accent-soft: rgba(228, 87, 46, 0.2);
-      --text: #f5f5f7;
-      --muted: #a0a3b1;
-      --card: #151522;
-      --border: #24243a;
-      --shadow: 0 18px 45px rgba(0, 0, 0, 0.7);
-      --radius-lg: 18px;
-      --radius-sm: 10px;
-      --gap: 1.5rem;
-      --font-main: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: var(--font-main);
-      background: radial-gradient(circle at top, #201020 0, #050509 55%);
-      color: var(--text);
-      line-height: 1.5;
-      scroll-behavior: smooth;
-    }
-
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
-
-    img {
-      max-width: 100%;
-      display: block;
-    }
-
-    /* Layout */
-
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 50;
-      backdrop-filter: blur(18px);
-      background: linear-gradient(to bottom, rgba(5,5,9,0.92), rgba(5,5,9,0.65));
-      border-bottom: 1px solid rgba(255,255,255,0.04);
-    }
-
-    .nav-inner {
-      max-width: 1120px;
-      margin: 0 auto;
-      padding: 0.8rem 1.2rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .logo {
-      font-weight: 700;
-      letter-spacing: 0.12em;
-      text-transform: uppercase;
-      font-size: 0.9rem;
-      display: flex;
-      align-items: center;
-      gap: 0.4rem;
-    }
-
-    .logo span {
-      width: 10px;
-      height: 10px;
-      border-radius: 999px;
-      background: var(--accent);
-      box-shadow: 0 0 18px rgba(228, 87, 46, 0.8);
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 1.4rem;
-      font-size: 0.9rem;
-    }
-
-    nav a {
-      color: var(--muted);
-      padding-bottom: 0.2rem;
-      border-bottom: 2px solid transparent;
-      transition: color 0.2s ease, border-color 0.2s ease;
-    }
-
-    nav a:hover {
-      color: var(--text);
-      border-color: var(--accent);
-    }
-
-    main {
-      margin-top: 60px; /* header height */
-    }
-
-    section {
-      max-width: 1120px;
-      margin: 0 auto;
-      padding: 3.5rem 1.2rem;
-    }
-
-    section h2 {
-      font-size: 1.8rem;
-      margin-bottom: 0.5rem;
-      letter-spacing: 0.12em;
-      text-transform: uppercase;
-    }
-
-    section p.section-subtitle {
-      color: var(--muted);
-      max-width: 620px;
-      font-size: 0.95rem;
-    }
-
-    /* Hero */
-
-    .hero {
-      max-width: none;
-      padding: 0;
-    }
-
-    .hero-inner {
-      position: relative;
-      min-height: 82vh;
-      display: grid;
-      grid-template-columns: minmax(0, 3fr) minmax(0, 2fr);
-      gap: 0;
-      background: radial-gradient(circle at top, #3a1111 0, #050509 60%);
-      color: var(--text);
-    }
-
-    .hero-image {
-      position: relative;
-      overflow: hidden;
-    }
-
-    .hero-image::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: radial-gradient(circle at bottom, transparent 0, rgba(5,5,9,0.7) 80%);
-    }
-
-    .hero-image img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      filter: saturate(1.2) contrast(1.1);
-    }
-
-    .hero-content {
-      padding: 4.5rem 2.5rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap: 1.4rem;
-    }
-
-    .hero-tag {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-      padding: 0.2rem 0.7rem;
-      border-radius: 999px;
-      border: 1px solid rgba(255,255,255,0.1);
-      background: rgba(5,5,9,0.7);
-      font-size: 0.75rem;
-      letter-spacing: 0.12em;
-      text-transform: uppercase;
-      color: var(--muted);
-    }
-
-    .hero-title {
-      font-size: clamp(2rem, 3.2vw + 1rem, 2.8rem);
-      line-height: 1.15;
-      text-transform: uppercase;
-    }
-
-    .hero-title span {
-      color: var(--accent);
-    }
-
-    .hero-text {
-      color: var(--muted);
-      font-size: 0.97rem;
-      max-width: 520px;
-    }
-
-    .hero-buttons {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.9rem;
-    }
-
-    .btn {
-      border-radius: 999px;
-      padding: 0.7rem 1.3rem;
-      border: 1px solid transparent;
-      font-size: 0.9rem;
-      display: inline-flex;
-      align-items: center;
-      gap: 0.45rem;
-      cursor: pointer;
-      transition: background 0.2s, color 0.2s, border-color 0.2s, transform 0.1s;
-    }
-
-    .btn-primary {
-      background: linear-gradient(135deg, #ff7043, #e4572e);
-      color: #fff;
-      box-shadow: var(--shadow);
-    }
-
-    .btn-secondary {
-      background: rgba(13,13,22,0.9);
-      border-color: rgba(255,255,255,0.09);
-      color: var(--muted);
-    }
-
-    .btn:hover {
-      transform: translateY(-1px);
-      border-color: var(--accent);
-    }
-
-    .hero-meta {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1.2rem;
-      margin-top: 0.4rem;
-      font-size: 0.78rem;
-      color: var(--muted);
-      text-transform: uppercase;
-      letter-spacing: 0.15em;
-    }
-
-    .hero-meta span {
-      opacity: 0.85;
-    }
-
-    /* Party grid */
-
-    .party-grid {
-      margin-top: 2.2rem;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(185px, 1fr));
-      gap: var(--gap);
-    }
-
-    .party-card {
-      background: radial-gradient(circle at top, #262034 0, #151522 60%);
-      border-radius: var(--radius-lg);
-      border: 1px solid var(--border);
-      overflow: hidden;
-      box-shadow: var(--shadow);
-      display: flex;
-      flex-direction: column;
-    }
-
-    .party-card img {
-      width: 100%;
-      aspect-ratio: 4 / 5;
-      object-fit: cover;
-    }
-
-    .party-body {
-      padding: 0.9rem 1rem 1rem;
-    }
-
-    .party-name {
-      font-size: 1.05rem;
-      font-weight: 600;
-    }
-
-    .party-role {
-      font-size: 0.83rem;
-      text-transform: uppercase;
-      letter-spacing: 0.14em;
-      color: var(--muted);
-      margin-top: 0.15rem;
-    }
-
-    .party-player {
-      font-size: 0.8rem;
-      margin-top: 0.35rem;
-      color: var(--muted);
-    }
-
-    .tagline {
-      margin-top: 0.45rem;
-      font-size: 0.85rem;
-      color: #e9e0ff;
-    }
-
-    /* Loot */
-
-    .loot-grid {
-      margin-top: 2.2rem;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-      gap: var(--gap);
-    }
-
-    .loot-card {
-      background: var(--card);
-      border-radius: var(--radius-lg);
-      border: 1px solid var(--border);
-      padding: 1rem 1.1rem 1.1rem;
-      box-shadow: var(--shadow);
-      position: relative;
-      overflow: hidden;
-    }
-
-    .loot-rarity {
-      font-size: 0.7rem;
-      text-transform: uppercase;
-      letter-spacing: 0.14em;
-      color: var(--accent);
-      padding: 0.1rem 0.55rem;
-      border-radius: 999px;
-      background: var(--accent-soft);
-      display: inline-block;
-      margin-bottom: 0.4rem;
-    }
-
-    .loot-name {
-      font-weight: 600;
-      margin-bottom: 0.15rem;
-    }
-
-    .loot-type {
-      font-size: 0.8rem;
-      color: var(--muted);
-      margin-bottom: 0.3rem;
-    }
-
-    .loot-text {
-      font-size: 0.85rem;
-      color: #e2e2f4;
-    }
-
-    .loot-hook {
-      margin-top: 0.4rem;
-      font-size: 0.8rem;
-      color: var(--muted);
-      font-style: italic;
-    }
-
-    /* Locations */
-
-    .locations-grid {
-      margin-top: 2.2rem;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: var(--gap);
-    }
-
-    .location-card {
-      background: var(--card);
-      border-radius: var(--radius-lg);
-      overflow: hidden;
-      border: 1px solid var(--border);
-      box-shadow: var(--shadow);
-      display: flex;
-      flex-direction: column;
-    }
-
-    .location-image {
-      position: relative;
-      overflow: hidden;
-    }
-
-    .location-image img {
-      width: 100%;
-      height: 220px;
-      object-fit: cover;
-      transform: scale(1.03);
-      transition: transform 0.3s ease, filter 0.3s ease;
-    }
-
-    .location-card:hover img {
-      transform: scale(1.08);
-      filter: contrast(1.1) saturate(1.1);
-    }
-
-    .location-body {
-      padding: 0.9rem 1rem 1.1rem;
-    }
-
-    .location-name {
-      font-weight: 600;
-      margin-bottom: 0.25rem;
-    }
-
-    .location-tag {
-      font-size: 0.78rem;
-      text-transform: uppercase;
-      letter-spacing: 0.14em;
-      color: var(--muted);
-      margin-bottom: 0.35rem;
-    }
-
-    .location-text {
-      font-size: 0.86rem;
-      color: #dee2ff;
-    }
-
-    /* RECAP SECTION */
-
-    .recap-wrapper {
-      margin-top: 2.2rem;
-      background: radial-gradient(circle at top, #2a1b33 0, #151522 60%);
-      border-radius: var(--radius-lg);
-      border: 1px solid var(--border);
-      box-shadow: var(--shadow);
-      padding: 1.6rem 1.6rem 1.8rem;
-    }
-
-    .recap-tagline {
-      font-size: 0.8rem;
-      text-transform: uppercase;
-      letter-spacing: 0.15em;
-      color: var(--muted);
-      margin-bottom: 0.4rem;
-    }
-
-    .recap-title {
-      font-size: 1.2rem;
-      font-weight: 600;
-      margin-bottom: 0.8rem;
-    }
-
-    .recap-divider {
-      height: 1px;
-      background: linear-gradient(to right, transparent, rgba(255,255,255,0.18), transparent);
-      margin: 0.8rem 0 1rem;
-    }
-
-    .recap-block + .recap-block {
-      margin-top: 1.1rem;
-    }
-
-    .recap-block h3 {
-      font-size: 0.95rem;
-      text-transform: uppercase;
-      letter-spacing: 0.16em;
-      color: var(--muted);
-      margin-bottom: 0.2rem;
-    }
-
-    .recap-block p {
-      font-size: 0.9rem;
-      color: #e5e5f5;
-    }
-
-    .recap-list {
-      margin-top: 0.4rem;
-      padding-left: 1.1rem;
-      font-size: 0.9rem;
-      color: #e5e5f5;
-    }
-
-    .recap-list li {
-      margin-bottom: 0.25rem;
-    }
-
-    .recap-highlight {
-      font-weight: 600;
-      color: var(--accent);
-    }
-
-    /* Footer */
-
-    footer {
-      border-top: 1px solid rgba(255,255,255,0.06);
-      padding: 1.6rem 1.2rem 2.3rem;
-      font-size: 0.8rem;
-      color: var(--muted);
-      text-align: center;
-    }
-
-    footer span {
-      color: var(--accent);
-    }
-
-    /* Responsive */
-
-    @media (max-width: 900px) {
-      .hero-inner {
-        grid-template-columns: minmax(0, 1fr);
-      }
-      .hero-image {
-        min-height: 46vh;
-      }
-      .hero-content {
-        padding: 2.6rem 1.5rem 3rem;
-      }
-      .nav-inner {
-        gap: 1rem;
-      }
-      nav ul {
-        gap: 0.7rem;
-        font-size: 0.8rem;
-      }
-    }
-
-    @media (max-width: 640px) {
-      .hero-buttons {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      section {
-        padding-inline: 1rem;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
     <div class="nav-inner">
