Refactor navigation structure in index.html

--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
 
 <body>
   <header>
-    <div class="nav-inner">
-      <div class="logo">
-        <span></span> Queen of Dragons
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#party">Party</a></li>
-          <li><a href="#recap">Recap</a></li>
-          <li><a href="#loot">Loot</a></li>
-          <li><a href="#locations">Places</a></li>
-        </ul>
-      </nav>
+  <div class="nav-inner">
+    <div class="logo">
+      <span></span> Queen of Dragons
     </div>
-  </header>
+
+    <button class="nav-toggle" aria-label="Toggle navigation">
+      <span class="nav-toggle-bar"></span>
+      <span class="nav-toggle-bar"></span>
+      <span class="nav-toggle-bar"></span>
+    </button>
+
+    <nav class="main-nav">
+      <ul>
+        <li><a href="#party">Party</a></li>
+        <li><a href="#loot">Loot</a></li>
+        <li><a href="#locations">Places</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
 
   <main>
     <!-- HERO / COVER -->
