Add script tag for external JavaScript file

--- a/index.html
+++ b/index.html
@@ -516,5 +516,6 @@
       rules &amp; setting based on Dungeons &amp; Dragons 5E.
     </p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
