--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       <span></span> Queen of Dragons
     </div>
 
+    <!-- Dark mode / theme toggle button -->
+    <button class="theme-toggle" type="button" aria-label="Cycle color theme">
+      Infernal
+    </button>
+
+    <!-- Hamburger button for mobile -->
     <button class="nav-toggle" aria-label="Toggle navigation">
       <span class="nav-toggle-bar"></span>
       <span class="nav-toggle-bar"></span>
@@ -29,7 +35,6 @@
     </nav>
   </div>
 </header>
-
 
   <main>
     <!-- HERO / COVER -->
