Fix HTML syntax for link and add script tag

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Queen of Dragons – Campaign Hub</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
-
+  
 <body>
   <header>
   <div class="nav-inner">
