Refactor theme toggle button for clarity

--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
       <span></span> Queen of Dragons
     </div>
 
-    <!-- Dark mode / theme toggle button -->
-    <button class="theme-toggle" type="button" aria-label="Cycle color theme">
+    <!-- Theme toggle button -->
+    <button
+      class="theme-toggle"
+      type="button"
+      data-theme-toggle
+      aria-label="Change color theme"
+    >
       Infernal
     </button>
 
@@ -36,6 +41,7 @@
     </nav>
   </div>
 </header>
+
 
   <main>
     <!-- HERO / COVER -->
