Add ambient effects container to index.html
Added a container for ambient effects in the body.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
   
 <body>
+  <!-- Ambient effects container -->
+<div class="ambient-layer"></div>
   <header>
   <div class="nav-inner">
     <div class="logo">
