Revise locations section text for thematic clarity
Updated the text in the locations section to enhance thematic relevance.

--- a/index.html
+++ b/index.html
@@ -437,8 +437,7 @@
       <h2>Places They Will See</h2>
       <p class="section-subtitle">
         From storm-lashed monasteries to skyships, hellscapes, and spider-haunted caverns.
-        Swap in your own text or art where you like — these are just styled placeholders
-        that fit your campaign’s tone.
+        Get ready for what the amazing yet terrifying world of Faerûn has to offer.
       </p>
 
       <div class="locations-grid">
