--- a/index.html
+++ b/index.html
@@ -14,37 +14,40 @@
   <div class="ambient-layer"></div>
 
   <header>
-    <div class="nav-inner">
-      <div class="logo">
-        <span></span> Queen of Dragons
-      </div>
-
-      <!-- Theme toggle button -->
-      <button
-        class="theme-toggle"
-        type="button"
-        data-theme-toggle
-        aria-label="Change color theme"
-      >
-        Infernal
-      </button>
-
-      <!-- Hamburger button for mobile -->
-      <button class="nav-toggle" type="button" aria-label="Toggle navigation" aria-expanded="false">
-        <span class="nav-toggle-bar"></span>
-        <span class="nav-toggle-bar"></span>
-        <span class="nav-toggle-bar"></span>
-      </button>
-
-      <nav class="main-nav">
-        <ul>
-          <li><a href="#party">Party</a></li>
-          <li><a href="#loot">Loot</a></li>
-          <li><a href="#locations">Places</a></li>
-        </ul>
-      </nav>
+  <div class="nav-inner">
+    <div class="logo">
+      <span></span> Queen of Dragons
     </div>
-  </header>
+
+    <!-- Theme toggle button -->
+    <button
+      class="theme-toggle"
+      type="button"
+      data-theme-toggle
+      aria-label="Change color theme"
+    >
+      Infernal
+    </button>
+
+    <!-- Hamburger button for mobile -->
+    <button class="nav-toggle" type="button" aria-label="Toggle navigation" aria-expanded="false">
+      <span class="nav-toggle-bar"></span>
+      <span class="nav-toggle-bar"></span>
+      <span class="nav-toggle-bar"></span>
+    </button>
+
+    <nav class="main-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="party.html">Party</a></li>
+        <li><a href="loot.html">Loot</a></li>
+        <li><a href="locations.html">Places</a></li>
+        <li><a href="sessions.html">Sessions</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
 
   <main>
     <!-- HERO / COVER -->
