Update hero section for party-focused content

--- a/party.html
+++ b/party.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Queen of Dragons – The Party</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Load main JS once, deferred -->
   <script src="script.js" defer></script>
 </head>
   
@@ -48,33 +49,34 @@
   </header>
 
   <main>
-    <!-- HERO / COVER -->
+    <!-- HERO / COVER (Party-focused) -->
     <section class="hero" id="top">
       <div class="hero-inner">
         <div class="hero-image">
-          <img src="images/cover-tiamat-avernus.jpg" alt="Tiamat rising over a hellish citadel as the party stands against her">
+          <!-- You can swap this for a group shot later if you like -->
+          <img src="images/cover-tiamat-avernus.jpg" alt="Adventuring party facing dragons and hellish skies">
         </div>
         <div class="hero-content">
           <div class="hero-tag">
-            <span>5E Campaign</span> • Meet the Heroes of the Saga
+            <span>Meet the Party</span> • Eight souls, one doomed world
           </div>
           <h1 class="hero-title">
-            <span>The Party</span><br />
-            Souls Bound by Dragons, Devils, and Fate
+            <span>The Dragon-Bound</span><br />
+            Heroes of Stormwreck, Hell, and Webs
           </h1>
           <p class="hero-text">
-            From Stormwreck Isle to Avernus and the Underdark, this is the core of
-            <em>Queen of Dragons</em> — the bards, hunters, paladins, warlocks, and rogues
-            who keep throwing themselves between the world and the apocalypse.
+            From a tiefling bard wrapped in starlight to a halfling paladin of reckless mercy,
+            this is the crew dragging the Sword Coast back from the brink — or going down
+            laughing as dragons, devils, and gods close in.
           </p>
           <div class="hero-buttons">
-            <a href="#party" class="btn btn-primary">View All Heroes</a>
-            <a href="index.html#top" class="btn btn-secondary">Back to Campaign Hub</a>
+            <a href="#party" class="btn btn-primary">Scroll to Party</a>
+            <a href="index.html" class="btn btn-secondary">Back to Campaign Hub</a>
           </div>
           <div class="hero-meta">
-            <span>Level 8 (current)</span>
-            <span>Party Size: 7–8</span>
+            <span>Level 8 (Current)</span>
             <span>Stormwreck → Tyranny → Avernus → Underdark</span>
+            <span>Party Size: 7–8</span>
           </div>
         </div>
       </div>
@@ -213,3 +215,4 @@
   </footer>
 </body>
 </html>
+
